fix: finalize example bundle wiring